[metadata]
author = Stefan Hagen
author_email = stefan@hagen.link
description = The whistle (Finnish: pilli, German: Der Pfiff) parsing random DAFIF like data.
home_page = https://git.sr.ht/~sthagen/pilli

keywords =
    code-generation
    developer-tools
    validation
    verification

long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Stefan Hagen
maintainer_email = stefan@hagen.link
name = pilli

project_urls =
    Bug Tracker = https://todo.sr.ht/~sthagen/pilli
    Documentation = https://codes.dilettant.life/docs/pilli
    Source Code = https://git.sr.ht/~sthagen/pilli
    Test Coverage = https://codes.dilettant.life/coverage/pilli

url = https://git.sr.ht/~sthagen/pilli
version = 2022.7.28


classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8

install_requires =
    scooby >= 0.7.0
    typer >= 0.7.0

packages = find:

[options.packages.find]
exclude =
    test*

[options.entry_points]
console_scripts =
    pilli = pilli.cli:app

[bdist_wheel]
universal = True

[tool:pytest]
testpaths = test
filterwarnings = error

[coverage:run]
branch = True
[coverage:report]
precision = 2
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if TYPE_CHECKING:
    @overload
omit =
    # __main__.py is trivial and hard to test properly
    */__main__.py
[isort]
line_length=120
known_first_party=pilli
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
[mypy]
strict = True
implicit_reexport = True
[flake8]
max-line-length = 120
max-complexity = 42
ignore = E203, W503
inline-quotes = '
multiline-quotes = """
